--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 ﻿.DS_Store
 node_modules
-uni_modules
 /dist
+/unpackage
+/.hbuilderx
+
 
 # local env files
 .env.local
@@ -11,9 +13,9 @@ uni_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Editor directories and files
-.hbuilderx
 .idea
 .vscode
 *.suo
@@ -21,11 +23,3 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
-build.sh
-.idea
-unpackage
-/.hbuilderx/
-package-lock.json
-/unpackage/dist/dev/mp-weixin/
-#/manifest.json
-/src/static/build-image
